--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	   <div id="gameContainer">
         <!-- Snake and food pixels will be added here dynamically with JavaScript -->
     </div>
-    <div class="scoreBoard pointsEarned">Your Score: <span id="score">0</span></div>
+    <div class="scoreBoard " id="pointsEarned">Your Score: <span id="score">0</span></div>
 
     <script type="text/javascript" src="./script.js">
 </script>
